--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "json-server": "0.16.1",
+    "react-bootstrap": "1.0.1",
+    "bootstrap": "4.5.0",
+    "@material-ui/core": "4.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server src/data.json --port 4000"
   },
   "eslintConfig": {
     "extends": "react-app"
