--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "json-server": "0.16.1",
     "react-bootstrap": "1.0.1",
     "bootstrap": "4.5.0",
-    "@material-ui/core": "4.10.2"
+    "@material-ui/core": "4.10.2",
+    "@material-ui/icons": "4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
